--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,122 @@ title: Schaefer Auto
 path: home
 ---
 
-<div
-  class="container mx-auto lg:h-screen flex flex-col justify-center items-center"
->
-  <h1>
-    Welcome to
-    <strong
-      class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500"
-    >
-      {{title}}
-    </strong>
-  </h1>
+<div class="w-full px-0 mx-0">
+  <!-- Hero Section -->
+  <section
+    class="flex flex-col justify-center items-center text-center relative w-full h-[400px] md:h-[650px] bg-cover bg-center"
+    style="background-image: url('{{ settings.hero.background_image }}');"
+  >
+    <!-- Blue overlay -->
+    <div class="absolute inset-0 bg-blue-500 opacity-50"></div>
+    <div class="relative z-10 px-4 md:px-0">
+      <h1 class="text-4xl md:text-6xl font-bold text-white">
+        {{ settings.name }}
+      </h1>
+      <p class="mt-4 text-lg md:text-xl text-white">
+        {{ settings.hero.subtitle }}
+      </p>
+      <div class="mt-6 space-x-4">
+        {% for button in settings.hero.cta %}
+        <a
+          href="{{ button.url }}"
+          class="px-6 py-3 bg-blue-500 text-white rounded-lg hover:bg-blue-600"
+          >{{ button.text }}</a
+        >
+        {% endfor %}
+      </div>
+    </div>
+  </section>
 
-  <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
-  </p>
+  <!-- Featured Inventory Section -->
+  <section class="my-12 mx-8">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">
+      Featured Inventory
+    </h2>
+    <p class="text-center mt-2">Check out our top picks for this month.</p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+      {% for car in settings.featured_inventory %}
+      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        <img
+          src="{{ car.image }}"
+          alt="{{ car.name }}"
+          class="w-full h-48 object-cover"
+        />
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">{{ car.name }}</h3>
+          <p class="text-gray-500">{{ car.price }}</p>
+          <a
+            href="{{ car.url }}"
+            class="text-blue-500 hover:underline mt-2 inline-block"
+            >View Details</a
+          >
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </section>
 
-  {% include "./_includes/partials/content.html" %}
+  <!-- Services Section -->
+  <section class="my-12 bg-gray-50 p-8 rounded-lg">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">Our Services</h2>
+    <p class="text-center mt-2">
+      From financing to vehicle maintenance, we’ve got you covered.
+    </p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
+      {% for service in settings.services %}
+      <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
+        <h3 class="font-bold text-xl">{{ service.title }}</h3>
+        <p class="text-gray-500 mt-2">{{ service.description }}</p>
+        <a
+          href="{{ service.url }}"
+          class="text-blue-500 hover:underline mt-2 inline-block"
+          >Learn More</a
+        >
+      </div>
+      {% endfor %}
+    </div>
+  </section>
+
+  <!-- Testimonials Section -->
+  <section class="my-12 mx-8">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">
+      What Our Customers Say
+    </h2>
+    <p class="text-center mt-2">Hear from satisfied customers.</p>
+    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      {% for testimonial in settings.testimonials %}
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="text-gray-700 italic">"{{ testimonial.content }}"</p>
+        <p class="mt-4 font-bold">- {{ testimonial.author }}</p>
+      </div>
+      {% endfor %}
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section class="my-12 mx-8 bg-gray-100 p-8 rounded-lg">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">About Us</h2>
+    <p class="text-center mt-2">
+      Learn more about our team and what drives us.
+    </p>
+    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="flex flex-col justify-center">
+        <h3 class="text-xl md:text-2xl font-semibold">Our Mission</h3>
+        <p class="mt-4 text-gray-700">
+          We are a dedicated team committed to providing exceptional service to
+          our customers. Our goal is to make your car-buying experience seamless
+          and enjoyable. From personalized customer support to offering a wide
+          variety of high-quality vehicles, we’re here to help you every step of
+          the way.
+        </p>
+      </div>
+      <div class="flex justify-center items-center">
+        <img
+          src="{{ settings.about.team_photo }}"
+          alt="Our Team"
+          class="w-full h-64 object-cover rounded-lg shadow-lg"
+        />
+      </div>
+    </div>
+  </section>
 </div>
