--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,1 +1,32 @@
-<h1>About page</h1>
+---
+title: About
+layout: default
+---
+
+<div class="w-full px-0 mx-0">
+  <section class="my-0 mx-8 bg-gray-100 p-8 rounded-lg">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">About Us</h2>
+    <p class="text-center mt-2">
+      Learn more about our team and what drives us.
+    </p>
+    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="flex flex-col justify-center">
+        <h3 class="text-xl md:text-2xl font-semibold">Our Mission</h3>
+        <p class="mt-4 text-gray-700">
+          We are a dedicated team committed to providing exceptional service to
+          our customers. Our goal is to make your car-buying experience seamless
+          and enjoyable. From personalized customer support to offering a wide
+          variety of high-quality vehicles, we’re here to help you every step of
+          the way.
+        </p>
+      </div>
+      <div class="flex justify-center items-center">
+        <img
+          src="{{ settings.about.team_photo }}"
+          alt="Our Team"
+          class="w-full h-64 object-cover rounded-lg shadow-lg"
+        />
+      </div>
+    </div>
+  </section>
+</div>
