--- a/src/index.html
+++ b/src/index.html
@@ -32,27 +32,41 @@ path: home
   </section>
 
   <!-- Featured Inventory Section -->
-  <section class="my-12 mx-8">
+  <section class="container mt-6 px-6">
     <h2 class="text-2xl md:text-4xl font-bold text-center">
       Featured Inventory
     </h2>
     <p class="text-center mt-2">Check out our top picks for this month.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-      {% for car in settings.featured_inventory %}
+      {% for post in collections.post | reverse %}
       <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        {% if post.data.image %}
         <img
-          src="{{ car.image }}"
-          alt="{{ car.name }}"
-          class="w-full h-48 object-cover"
+          src="{{ post.data.image }}"
+          alt="{{ post.data.title | default('Vehicle Image') }}"
+          class="w-full h-48 object-contain"
         />
+        {% endif %}
         <div class="p-4">
-          <h3 class="font-semibold text-lg">{{ car.name }}</h3>
-          <p class="text-gray-500">{{ car.price }}</p>
-          <a
-            href="{{ car.url }}"
-            class="text-blue-500 hover:underline mt-2 inline-block"
-            >View Details</a
-          >
+          <h3 class="font-semibold text-lg">
+            <a href="{{ post.url | url }}">
+              {{ post.data.title | default('Untitled') }}
+            </a>
+          </h3>
+          <p class="text-base leading-6 text-gray-500 mb-3">
+            <time>{{ post.date | readableDate }} </time>
+          </p>
+          {% if post.data.description %}
+          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          {% endif %}
+          <p>
+            <a
+              href="{{ post.url | url }}"
+              class="text-indigo-500 font-bold text-lg"
+            >
+              Read more →
+            </a>
+          </p>
         </div>
       </div>
       {% endfor %}
