--- a/src/services/index.html
+++ b/src/services/index.html
@@ -1,1 +1,26 @@
-<h1>services</h1>
+---
+title: Services
+layout: default
+---
+
+<div class="w-full px-0 mx-0">
+  <section class="my-0 bg-gray-50 p-8 rounded-lg">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">Our Services</h2>
+    <p class="text-center mt-2">
+      From financing to vehicle maintenance, we’ve got you covered.
+    </p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
+      {% for service in settings.services %}
+      <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
+        <h3 class="font-bold text-xl">{{ service.title }}</h3>
+        <p class="text-gray-500 mt-2">{{ service.description }}</p>
+        <a
+          href="{{ service.url }}"
+          class="text-blue-500 hover:underline mt-2 inline-block"
+          >Learn More</a
+        >
+      </div>
+      {% endfor %}
+    </div>
+  </section>
+</div>
