--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -1,1 +1,21 @@
-<h1>Testimonials</h1>
+---
+title: Testimonials
+layout: default
+---
+
+<div class="w-full px-0 mx-0">
+  <section class="my-12 mx-8">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">
+      What Our Customers Say
+    </h2>
+    <p class="text-center mt-2">Hear from satisfied customers.</p>
+    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      {% for testimonial in settings.testimonials %}
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="text-gray-700 italic">"{{ testimonial.content }}"</p>
+        <p class="mt-4 font-bold">- {{ testimonial.author }}</p>
+      </div>
+      {% endfor %}
+    </div>
+  </section>
+</div>
