--- a/src/index.html
+++ b/src/index.html
@@ -136,4 +136,87 @@ path: home
       </div>
     </div>
   </section>
+
+  <!-- Contact Section -->
+  <section class="my-12 mx-8 bg-white p-8 rounded-lg">
+    <h2 class="text-2xl md:text-4xl font-bold text-center">Contact Us</h2>
+    <p class="text-center mt-2">
+      We'd love to hear from you. Fill out the form below to get in touch!
+    </p>
+    <form
+      method="POST"
+      action="/thank-you"
+      netlify
+      class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-6"
+    >
+      <!-- Name Field -->
+      <div class="col-span-1 md:col-span-2">
+        <label for="name" class="block text-gray-700 font-semibold"
+          >Your Name</label
+        >
+        <input
+          type="text"
+          id="name"
+          name="name"
+          required
+          placeholder="John Doe"
+          class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+        />
+      </div>
+
+      <!-- Email Field -->
+      <div class="col-span-1">
+        <label for="email" class="block text-gray-700 font-semibold"
+          >Your Email</label
+        >
+        <input
+          type="email"
+          id="email"
+          name="email"
+          required
+          placeholder="you@example.com"
+          class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+        />
+      </div>
+
+      <!-- Phone Field -->
+      <div class="col-span-1">
+        <label for="phone" class="block text-gray-700 font-semibold"
+          >Your Phone</label
+        >
+        <input
+          type="tel"
+          id="phone"
+          name="phone"
+          placeholder="(555) 555-5555"
+          class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+        />
+      </div>
+
+      <!-- Message Field -->
+      <div class="col-span-1 md:col-span-2">
+        <label for="message" class="block text-gray-700 font-semibold"
+          >Your Message</label
+        >
+        <textarea
+          id="message"
+          name="message"
+          required
+          rows="5"
+          placeholder="Type your message here..."
+          class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+        ></textarea>
+      </div>
+
+      <!-- Submit Button -->
+      <div class="col-span-1 md:col-span-2 text-center">
+        <button
+          type="submit"
+          class="px-6 py-3 bg-blue-500 text-white font-semibold rounded-lg hover:bg-blue-600"
+        >
+          Send Message
+        </button>
+      </div>
+    </form>
+  </section>
 </div>
