--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -4,6 +4,16 @@ layout: default
 ---
 
 <div class="w-full px-0 mx-0">
+  <section
+    class="flex flex-col justify-center items-center text-center relative w-full h-[200px] md:h-[300px] bg-cover bg-center"
+    style="background-image: url('{{ settings.hero.background_image }}');"
+  >
+    <!-- Blue overlay -->
+    <div class="absolute inset-0 bg-blue-500 opacity-50"></div>
+    <div class="relative z-10 px-4 md:px-0">
+      <h1 class="text-4xl md:text-6xl font-bold text-white">TESTIMONIALS</h1>
+    </div>
+  </section>
   <section class="my-12 mx-8">
     <h2 class="text-2xl md:text-4xl font-bold text-center">
       What Our Customers Say
