--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Listed Vehicles
+title: Latest Vehicles
 ---
 
-<div class="container mt-6 px-6">
-  <h1 class="font-bold text-6xl">{{ title }}</h1>
+<div class="container px-6">
+  <h1 class="font-bold pt-12">{{ title }}</h1>
 
   <section class="mt-15">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
