--- a/src/services/index.html
+++ b/src/services/index.html
@@ -9,7 +9,7 @@ layout: default
     style="background-image: url('{{ settings.hero.background_image }}');"
   >
     <!-- Blue overlay -->
-    <div class="absolute inset-0 bg-blue-500 opacity-50"></div>
+    <div class="absolute inset-0 bg-[#1E6CB0] opacity-50"></div>
     <div class="relative z-10 px-4 md:px-0">
       <h1 class="text-4xl md:text-6xl font-bold text-white">SERVICES</h1>
     </div>
@@ -26,7 +26,7 @@ layout: default
         <p class="text-gray-500 mt-2">{{ service.description }}</p>
         <a
           href="{{ service.url }}"
-          class="text-blue-500 hover:underline mt-2 inline-block"
+          class="text-[#1E6CB0] hover:underline mt-2 inline-block"
           >Learn More</a
         >
       </div>
