--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -9,7 +9,7 @@ layout: default
     style="background-image: url('{{ settings.hero.background_image }}');"
   >
     <!-- Blue overlay -->
-    <div class="absolute inset-0 bg-blue-500 opacity-50"></div>
+    <div class="absolute inset-0 bg-[#1E6CB0] opacity-50"></div>
     <div class="relative z-10 px-4 md:px-0">
       <h1 class="text-4xl md:text-6xl font-bold text-white">TESTIMONIALS</h1>
     </div>
