--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -7,39 +7,6 @@ title: Latest Vehicles
   <h1 class="font-bold pt-12">{{ title }}</h1>
 
   <section class="mt-15">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-      {% for post in collections.post | reverse %}
-      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
-        {% if post.data.image %}
-        <img
-          src="{{ post.data.image }}"
-          alt="{{ post.data.title | default('Vehicle Image') }}"
-          class="w-full h-48 object-contain"
-        />
-        {% endif %}
-        <div class="p-4">
-          <h3 class="font-semibold text-lg">
-            <a href="{{ post.url | url }}">
-              {{ post.data.title | default('Untitled') }}
-            </a>
-          </h3>
-          <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }} </time>
-          </p>
-          {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
-          {% endif %}
-          <p>
-            <a
-              href="{{ post.url | url }}"
-              class="text-indigo-500 font-bold text-lg"
-            >
-              Read more →
-            </a>
-          </p>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
+    {% include "../_includes/partials/post-grid.html" %}
   </section>
 </div>
