--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,42 @@ path: home
   </section>
 
   <!-- Featured Inventory Section -->
-  <section class="container my-12 px-6">
+  <section class="container my-16 px-6">
     <h2 class="text-2xl md:text-4xl font-bold text-left">Featured Inventory</h2>
-    <p class="text-left mt-2">Check out our most recent vehicles.</p>
-    {% include "./_includes/partials/post-grid.html" %}
-
+    <p class="text-left mt-2">Check out our top picks for this month.</p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+      {% for post in collections.post | reverse %} {% if loop.index <= 6 %}
+      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+        {% if post.data.image %}
+        <img
+          src="{{ post.data.image }}"
+          alt="{{ post.data.title | default('Vehicle Image') }}"
+          class="w-full h-48 object-cover"
+        />
+        {% endif %}
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">
+            <a href="{{ post.url | url }}">
+              {{ post.data.title | default('Untitled') }}
+            </a>
+          </h3>
+          <p class="text-base leading-6 text-gray-500 mb-3">
+            <time>{{ post.date | readableDate }}</time>
+          </p>
+          {% if post.data.description %}
+          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          {% endif %}
+          <p>
+            <a
+              href="{{ post.url | url }}"
+              class="text-[#1E6CB0] font-bold text-lg"
+            >
+              Read more →
+            </a>
+          </p>
+        </div>
+      </div>
+      {% endif %} {% endfor %}
     </div>
   </section>
 
