--- a/src/index.html
+++ b/src/index.html
@@ -13,24 +13,32 @@ path: home
     <!-- Blue overlay -->
     <div class="absolute inset-0 bg-[#1E6CB0] opacity-50"></div>
     <div class="relative z-10 px-4 md:px-0">
-      <h1 class="text-white">{{ settings.name }}</h1>
+      <h1 class="text-white">{{ settings.hero.title }}</h1>
       <p class="mt-4 text-lg md:text-xl text-white">
         {{ settings.hero.subtitle }}
       </p>
-      <div class="mt-6 space-x-4">
-        {% for button in settings.hero.cta %}
+      <div class="mt-8 space-x-4">
+        <!-- First Button: View Inventory (Solid Blue) -->
         <a
-          href="{{ button.url }}"
-          class="px-6 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
-          >{{ button.text }}</a
+          href="/vehicles"
+          class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
         >
-        {% endfor %}
+          View Inventory
+        </a>
+
+        <!-- Second Button: Contact Us (Outlined Blue) -->
+        <a
+          href="/contact"
+          class="px-6 py-3 bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+        >
+          Contact Us
+        </a>
       </div>
     </div>
   </section>
 
   <!-- Featured Inventory Section -->
-  <section class="container my-16 px-6">
+  <section class="container my-12 px-6">
     <h2 class="text-2xl md:text-4xl font-bold text-left">Featured Inventory</h2>
     <p class="text-left mt-2">Check out our top picks for this month.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
@@ -70,9 +78,11 @@ path: home
   </section>
 
   <!-- Services Section -->
-  <section class="my-20 bg-gray-50 p-8 rounded-lg">
-    <h2 class="text-2xl md:text-4xl font-bold text-center">Our Services</h2>
-    <p class="text-center mt-2">
+  <section class="my-20 bg-[#1E6CB0] p-8 rounded-lg">
+    <h2 class="text-2xl md:text-4xl font-bold text-center text-white">
+      Our Services
+    </h2>
+    <p class="text-center mt-2 text-white">
       From financing to vehicle maintenance, we’ve got you covered.
     </p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
@@ -107,7 +117,7 @@ path: home
   </section>
 
   <!-- About Section -->
-  <section class="my-20 bg-gray-100 p-8">
+  <section class="my-10 bg-gray-100 p-8">
     <div class="container grid grid-cols-1 md:grid-cols-2 gap-8">
       <div class="flex flex-col justify-center">
         <h2>About Us</h2>
@@ -132,109 +142,111 @@ path: home
   </section>
 
   <!-- Contact Section -->
-  <section
-    class="my-20 container px-6 bg-white grid grid-cols-1 md:grid-cols-8 gap-16"
-  >
-    <!-- Left Side: Contact Info -->
-    <div class="flex flex-col col-span-4">
-      <h2 class="text-2xl md:text-4xl font-bold mb-4">Get in Touch</h2>
-      <p class="text-gray-600 mb-8">
-        Reach out to us directly or use the form to send us a message. We’d love
-        to hear from you!
-      </p>
-      <div class="space-y-6">
-        <div>
-          <h3 class="text-lg font-semibold">Phone</h3>
-          <p class="text-gray-700">(555) 555-5555</p>
-        </div>
-        <div>
-          <h3 class="text-lg font-semibold">Email</h3>
-          <p class="text-gray-700">contact@example.com</p>
-        </div>
-        <div>
-          <h3 class="text-lg font-semibold">Location</h3>
-          <p class="text-gray-700">123 Main Street, Hometown, USA</p>
+  <section class="my-10 bg-white p-8">
+    <div class="container grid grid-cols-1 md:grid-cols-2 gap-8">
+      <!-- Left Side: Contact Info -->
+      <div class="flex flex-col">
+        <h2 class="text-2xl md:text-4xl font-bold mb-4">Get in Touch</h2>
+        <p class="text-gray-600 mb-8">
+          Reach out to us directly or use the form to send us a message. We’d
+          love to hear from you!
+        </p>
+        <div class="space-y-6">
+          <div>
+            <h3 class="text-lg font-semibold">Phone</h3>
+            <p class="text-gray-700">(555) 555-5555</p>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold">Email</h3>
+            <p class="text-gray-700">contact@example.com</p>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold">Location</h3>
+            <p class="text-gray-700">123 Main Street, Hometown, USA</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Right Side: Contact Form -->
-    <div class="bg-gray-100 p-10 rounded-lg shadow-md col-span-4">
-      <form
-        method="POST"
-        action="/thank-you"
-        netlify
-        class="grid grid-cols-1 gap-4"
-      >
-        <!-- Name Field -->
-        <div>
-          <label for="name" class="block text-gray-700 font-semibold"
-            >Your Name</label
+      <!-- Right Side: Contact Form -->
+      <div class="flex justify-center items-center">
+        <div class="bg-gray-100 p-10 rounded-lg shadow-md w-full">
+          <form
+            method="POST"
+            action="/thank-you"
+            netlify
+            class="grid grid-cols-1 gap-4"
           >
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            placeholder="John Doe"
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-          />
-        </div>
+            <!-- Name Field -->
+            <div>
+              <label for="name" class="block text-gray-700 font-semibold"
+                >Your Name</label
+              >
+              <input
+                type="text"
+                id="name"
+                name="name"
+                required
+                placeholder="John Doe"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
 
-        <!-- Email Field -->
-        <div>
-          <label for="email" class="block text-gray-700 font-semibold"
-            >Your Email</label
-          >
-          <input
-            type="email"
-            id="email"
-            name="email"
-            required
-            placeholder="you@example.com"
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-          />
-        </div>
+            <!-- Email Field -->
+            <div>
+              <label for="email" class="block text-gray-700 font-semibold"
+                >Your Email</label
+              >
+              <input
+                type="email"
+                id="email"
+                name="email"
+                required
+                placeholder="you@example.com"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
 
-        <!-- Phone Field -->
-        <div>
-          <label for="phone" class="block text-gray-700 font-semibold"
-            >Your Phone</label
-          >
-          <input
-            type="tel"
-            id="phone"
-            name="phone"
-            placeholder="(555) 555-5555"
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-          />
-        </div>
+            <!-- Phone Field -->
+            <div>
+              <label for="phone" class="block text-gray-700 font-semibold"
+                >Your Phone</label
+              >
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                placeholder="(555) 555-5555"
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+              />
+            </div>
 
-        <!-- Message Field -->
-        <div>
-          <label for="message" class="block text-gray-700 font-semibold"
-            >Your Message</label
-          >
-          <textarea
-            id="message"
-            name="message"
-            required
-            rows="6"
-            placeholder="Type your message here..."
-            class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
-          ></textarea>
-        </div>
+            <!-- Message Field -->
+            <div>
+              <label for="message" class="block text-gray-700 font-semibold"
+                >Your Message</label
+              >
+              <textarea
+                id="message"
+                name="message"
+                required
+                rows="6"
+                placeholder="Type your message here..."
+                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
+              ></textarea>
+            </div>
 
-        <!-- Submit Button -->
-        <div class="text-center">
-          <button
-            type="submit"
-            class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
-          >
-            Send Message
-          </button>
+            <!-- Submit Button -->
+            <div class="text-center mt-4">
+              <button
+                type="submit"
+                class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+              >
+                Send Message
+              </button>
+            </div>
+          </form>
         </div>
-      </form>
+      </div>
     </div>
   </section>
 </div>
