--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@ path: home
   <!-- Hero Section -->
   <section
     class="flex flex-col justify-center items-center text-center relative w-full h-[400px] md:h-[600px] bg-cover bg-center"
-    style="background-image: url('{{ settings.hero.background_image }}');"
-  >
+    style="background-image: url('./static/img/about/schaefer-auto10.jpeg');"
+>
     <!-- Blue overlay -->
     <div class="absolute inset-0 bg-[#1E6CB0] opacity-50"></div>
     <div class="relative z-10 px-4 md:px-0">
-      <h1 class="text-white">{{ settings.hero.title }}</h1>
+      <h1 class="text-white">Finding the right used vehicle for you!</h1>
       <p class="mt-4 text-lg md:text-xl text-white">
-        {{ settings.hero.subtitle }}
+        Based out of Lomira, Wisconsin, we work with you to find the perfect vehicle for you at an affordable price.
       </p>
       <div class="mt-8 space-x-4">
         <!-- First Button: View Inventory (Solid Blue) -->
@@ -38,44 +38,56 @@ path: home
   </section>
 
   <!-- Featured Inventory Section -->
-  <section class="container my-12 px-6">
-    <h2 class="text-2xl md:text-4xl font-bold text-left">Featured Inventory</h2>
-    <p class="text-left mt-2">Check out our top picks for this month.</p>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-      {% for post in collections.post | reverse %} {% if loop.index <= 6 %}
-      <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
-        {% if post.data.image %}
+
+<section class="container my-12 px-6">
+  <h2 class="text-2xl md:text-4xl font-bold text-left">Featured Inventory</h2>
+  <p class="text-left mt-2">Check out our top picks for this month.</p>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+    {% for post in collections.post | reverse %} {% if loop.index <= 6 %}
+    <div class="border rounded-lg overflow-hidden shadow-md hover:shadow-lg">
+      {% if post.data.image %}
+      <a href="{{ post.url | url }}">
         <img
           src="{{ post.data.image }}"
           alt="{{ post.data.title | default('Vehicle Image') }}"
           class="w-full h-48 object-cover"
         />
+      </a>
+      {% endif %}
+      <div class="p-4">
+        <h3 class="font-semibold text-lg">
+          <a href="{{ post.url | url }}">
+            {{ post.data.title | default('Untitled') }}
+          </a>
+        </h3>
+        <p class="text-base leading-6 text-gray-500 mb-3">
+          <time>{{ post.date | readableDate }}</time>
+        </p>
+        {% if post.data.description %}
+        <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
         {% endif %}
-        <div class="p-4">
-          <h3 class="font-semibold text-lg">
-            <a href="{{ post.url | url }}">
-              {{ post.data.title | default('Untitled') }}
-            </a>
-          </h3>
-          <p class="text-base leading-6 text-gray-500 mb-3">
-            <time>{{ post.date | readableDate }}</time>
-          </p>
-          {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
-          {% endif %}
-          <p>
-            <a
-              href="{{ post.url | url }}"
-              class="text-[#1E6CB0] font-bold text-lg"
-            >
-              Read more →
-            </a>
-          </p>
-        </div>
+        <p>
+          <a
+            href="{{ post.url | url }}"
+            class="text-[#1E6CB0] font-bold text-lg"
+          >
+            Read more →
+          </a>
+        </p>
       </div>
-      {% endif %} {% endfor %}
+    </div>
+    {% endif %} {% endfor %}
+
+    <div class="col-span-full flex justify-center">
+      <a
+        href="/vehicles"
+        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+      >
+        View All Vehicles
+      </a>
     </div>
   </section>
+
 
   <!-- Services Section -->
   <section class="my-20 bg-[#1E6CB0] p-8 rounded-lg">
@@ -86,17 +98,33 @@ path: home
       From financing to vehicle maintenance, we’ve got you covered.
     </p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
-      {% for service in settings.services %}
       <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
-        <h3 class="font-bold text-xl">{{ service.title }}</h3>
-        <p class="text-gray-500 mt-2">{{ service.description }}</p>
+        <h3 class="font-bold text-xl">service 1</h3>
+        <p class="text-gray-500 mt-2">description</p>
         <a
-          href="{{ service.url }}"
+          href="/"
           class="text-[#1E6CB0] hover:underline mt-2 inline-block"
           >Learn More</a
         >
       </div>
-      {% endfor %}
+      <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
+        <h3 class="font-bold text-xl">service 2</h3>
+        <p class="text-gray-500 mt-2">description</p>
+        <a
+          href="/"
+          class="text-[#1E6CB0] hover:underline mt-2 inline-block"
+          >Learn More</a
+        >
+      </div>
+      <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
+        <h3 class="font-bold text-xl">service 3</h3>
+        <p class="text-gray-500 mt-2">description</p>
+        <a
+          href="/"
+          class="text-[#1E6CB0] hover:underline mt-2 inline-block"
+          >Learn More</a
+        >
+      </div>
     </div>
   </section>
 
@@ -106,13 +134,28 @@ path: home
       What Our Customers Say
     </h2>
     <p class="text-center mt-2">Hear from satisfied customers.</p>
-    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      {% for testimonial in settings.testimonials %}
+    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"> 
       <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="text-gray-700 italic">"{{ testimonial.content }}"</p>
-        <p class="mt-4 font-bold">- {{ testimonial.author }}</p>
+        <p class="text-gray-700 italic">"content"</p>
+        <p class="mt-4 font-bold">- author</p>
       </div>
-      {% endfor %}
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="text-gray-700 italic">"content"</p>
+        <p class="mt-4 font-bold">- author</p>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="text-gray-700 italic">"content"</p>
+        <p class="mt-4 font-bold">- author</p>
+      </div>
+
+    </div>
+    <div class="col-span-full flex justify-center mt-6">
+      <a
+        href="/testimonials"
+        class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600"
+      >
+        View All Testimonials
+      </a>
     </div>
   </section>
 
