--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Content Manager</title>
+    <title>Schaefer Auto Vehicle Uploads</title>
+    <link rel="stylesheet" href="../static/css/cms.css" />
   </head>
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
