--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -14,5 +14,6 @@
       type="text/javascript"
       src="https://identity.netlify.com/v1/netlify-identity-widget.js"
     ></script>
+    <link href="mobile-overrides.css" rel="stylesheet" />
   </body>
 </html>
