--- a/src/vehicles/index.html
+++ b/src/vehicles/index.html
@@ -37,11 +37,11 @@ title: Vehicle Inventory
             {% if post.data.price %}<span class="font-bold">${{ post.data.price }}</span>{% endif %}
             {% if post.data.miles %}<span class="font-bold">{{ post.data.miles }} miles</span>{% endif %}
           </div>
-          <div class="text-base leading-6 text-gray-500 mb-3 border-b pb-2">
-            {% if post.date %}<span class="font-medium">{{ post.date | readableDate }}</span>{% endif %}
+          <div class="text-xs text-gray-500 mb-3 border-b pb-2">
+            {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
           </div>
           {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          <p class="mb-3">{{ post.data.description.split(' ').slice(0, 20).join(' ') }}..</p>
           {% endif %}
           <p>
             <a
@@ -83,11 +83,11 @@ title: Vehicle Inventory
             {% if post.data.price %}<span class="font-bold">${{ post.data.price }}</span>{% endif %}
             {% if post.data.miles %}<span class="font-bold">{{ post.data.miles }} miles</span>{% endif %}
           </div>
-          <div class="text-base leading-6 text-gray-500 mb-3 border-b pb-2">
-            {% if post.date %}<span class="font-medium">{{ post.date | readableDate }}</span>{% endif %}
+          <div class="text-xs text-gray-500 mb-3 border-b pb-2">
+            {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
           </div>
           {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          <p class="mb-3">{{ post.data.description.split(' ').slice(0, 20).join(' ') }}..</p>
           {% endif %}
           <p>
             <a
@@ -126,11 +126,11 @@ title: Vehicle Inventory
             {% if post.data.price %}<span class="font-bold">${{ post.data.price }}</span>{% endif %}
             {% if post.data.miles %}<span class="font-bold">{{ post.data.miles }} miles</span>{% endif %}
           </div>
-          <div class="text-base leading-6 text-gray-500 mb-3 border-b pb-2">
-            {% if post.date %}<span class="font-medium">{{ post.date | readableDate }}</span>{% endif %}
+          <div class="text-xs text-gray-500 mb-3 border-b pb-2">
+            {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
           </div>
           {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          <p class="mb-3">{{ post.data.description.split(' ').slice(0, 20).join(' ') }}..</p>
           {% endif %}
           <p>
             <a
@@ -169,11 +169,11 @@ title: Vehicle Inventory
             {% if post.data.price %}<span class="font-bold">${{ post.data.price }}</span>{% endif %}
             {% if post.data.miles %}<span class="font-bold">{{ post.data.miles }} miles</span>{% endif %}
           </div>
-          <div class="text-base leading-6 text-gray-500 mb-3 border-b pb-2">
-            {% if post.date %}<span class="font-medium">{{ post.date | readableDate }}</span>{% endif %}
+          <div class="text-xs text-gray-500 mb-3 border-b pb-2">
+            {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
           </div>
           {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          <p class="mb-3">{{ post.data.description.split(' ').slice(0, 20).join(' ') }}..</p>
           {% endif %}
           <p>
             <a
@@ -212,11 +212,11 @@ title: Vehicle Inventory
             {% if post.data.price %}<span class="font-bold">${{ post.data.price }}</span>{% endif %}
             {% if post.data.miles %}<span class="font-bold">{{ post.data.miles }} miles</span>{% endif %}
           </div>
-          <div class="text-base leading-6 text-gray-500 mb-3 border-b pb-2">
-            {% if post.date %}<span class="font-medium">{{ post.date | readableDate }}</span>{% endif %}
+          <div class="text-xs text-gray-500 mb-3 border-b pb-2">
+            {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
           </div>
           {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          <p class="mb-3">{{ post.data.description.split(' ').slice(0, 20).join(' ') }}..</p>
           {% endif %}
           <p>
             <a
@@ -255,11 +255,11 @@ title: Vehicle Inventory
             {% if post.data.price %}<span class="font-bold">${{ post.data.price }}</span>{% endif %}
             {% if post.data.miles %}<span class="font-bold">{{ post.data.miles }} miles</span>{% endif %}
           </div>
-          <div class="text-base leading-6 text-gray-500 mb-3 border-b pb-2">
-            {% if post.date %}<span class="font-medium">{{ post.date | readableDate }}</span>{% endif %}
+          <div class="text-xs text-gray-500 mb-3 border-b pb-2">
+            {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
           </div>
           {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          <p class="mb-3">{{ post.data.description.split(' ').slice(0, 20).join(' ') }}..</p>
           {% endif %}
           <p>
             <a
@@ -289,23 +289,27 @@ title: Vehicle Inventory
         </a>
         {% endif %}
         <div class="p-4">
-          <h3>
+          <h3 class="mb-2">
             <a href="{{ post.url | url }}">
               {{ post.data.title | default('Untitled') }}
             </a>
           </h3>
-          <p class="text-base leading-6 text-gray-500 mb-3">
-           {{ post.date | readableDate }}
-          </p>
+          <div class="text-gray-500 mb-4 flex flex-wrap gap-8">
+            {% if post.data.price %}<span class="font-bold">${{ post.data.price }}</span>{% endif %}
+            {% if post.data.miles %}<span class="font-bold">{{ post.data.miles }} miles</span>{% endif %}
+          </div>
+          <div class="text-xs text-gray-500 mb-3 border-b pb-2">
+            {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
+          </div>
           {% if post.data.description %}
-          <p class="text-lg text-gray-500 mb-3">{{ post.data.description }}</p>
+          <p class="mb-3">{{ post.data.description.split(' ').slice(0, 20).join(' ') }}..</p>
           {% endif %}
           <p>
             <a
               href="{{ post.url | url }}"
               class="text-[#1E6CB0] font-bold text-lg"
             >
-              See details →
+              See Details →
             </a>
           </p>
         </div>
